--- a/package.json
+++ b/package.json
@@ -5,5 +5,44 @@
   "repository": "https://github.com/FirstLegoLeague/cloud-agent.git",
   "author": "Roy Shmueli <2903801+2roy999@users.noreply.github.com>",
   "license": "GPL-3.0",
-  "private": true
+  "private": true,
+  "scripts": {
+    "start": "webpack-dev-server --mode development --config webpack.dev.js"
+  },
+  "dependencies": {
+    "@first-lego-league/ms-auth": "^1.4.1",
+    "@first-lego-league/ms-client": "^1.0.3",
+    "@first-lego-league/ms-correlation": "^1.0.1",
+    "@first-lego-league/ms-logger": "^2.0.0",
+    "bluebird": "^3.5.5",
+    "fastify": "^2.7.0",
+    "mhub": "^2.0.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "@babel/preset-react": "^7.0.0",
+    "@first-lego-league/user-interface": "^2.1.0",
+    "babel-loader": "^8.0.6",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^3.1.0",
+    "eslint": "^6.1.0",
+    "eslint-config-first-lego-league": "^1.0.1",
+    "eslint-config-standard": "^13.0.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-node": "^9.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "file-loader": "^4.1.0",
+    "html-webpack-plugin": "^3.2.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-drop-zone": "^3.0.7",
+    "style-loader": "^0.23.1",
+    "uglifyjs-webpack-plugin": "^2.1.3",
+    "webpack": "^4.38.0",
+    "webpack-cli": "^3.3.6",
+    "webpack-dev-server": "^3.7.2",
+    "webpack-merge": "^4.2.1"
+  }
 }
