--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+### Project Related ###
+
+public/
+module-config.json
 
 # Created by https://www.gitignore.io/api/node
 # Edit at https://www.gitignore.io/?templates=node
