--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "bluebird": "^3.5.5",
     "fastify": "^2.7.0",
     "mhub": "^2.0.0",
-    "moment": "^2.24.0"
+    "moment": "^2.24.0",
+    "mongodb": "^3.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
