--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.19.0",
     "bluebird": "^3.5.5",
     "fastify": "^2.7.0",
+    "lodash": "^4.17.15",
     "mhub": "^2.0.0",
     "moment": "^2.24.0",
     "mongodb": "^3.3.2"
@@ -45,6 +46,7 @@
     "faker": "^4.1.0",
     "file-loader": "^4.1.0",
     "html-webpack-plugin": "^3.2.0",
+    "mkdirp": "^0.5.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-drop-zone": "^3.0.7",
